--- a/table.html
+++ b/table.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="jquery-1.7.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="jquery-ui-1.8.16.custom.min.js"></script>
-    <script src="jquery.dataTables.min.js" type="text/javascript"></script>
+  <script src="js/jquery-1.7.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="js/jquery-ui-1.8.16.custom.min.js"></script>
+    <script src="js/jquery.dataTables.min.js" type="text/javascript"></script>
   <link type="text/css" href="css/smoothness/jquery-ui-1.8.16.custom.css" rel="stylesheet" />	
   <link type="text/css" href="css/demo.css" rel="stylesheet" />	
   
