Changed style in popup.hmtl and made the table wider

--- a/popup.html
+++ b/popup.html
@@ -12,6 +12,18 @@
     color: #5d85f9;
     
   }
+	a{
+	font-family: arial;
+	font-size: 35px;
+	color: #5d85f9;
+	text-decoration: none;
+}
+	a:hover {
+	font-family: arial;
+	font-size: 35px;
+	color: black;
+	text-decoration: none;
+}
   img{
     height: 400px;
     width: 250px;
@@ -22,6 +34,7 @@
     border: 10px;
     float: left;
   }
+
   </style>
   <script>
   var testdata = {sciname: 'melissa officinalis', 
