--- a/popup.html
+++ b/popup.html
@@ -8,31 +8,30 @@
   <style>
   article{
     font-family: arial;
-    font-size: 35px;
+    font-size: 25px;
     color: #5d85f9;
+    height: 400px;
     
   }
 	a{
-	font-family: arial;
-	font-size: 35px;
-	color: #5d85f9;
+	font-size: 25px;
+	color: black;
 	text-decoration: none;
 }
 	a:hover {
-	font-family: arial;
-	font-size: 35px;
-	color: black;
-	text-decoration: none;
+	  color: #5d85f9;
+	  text-decoration: none;
 }
   img{
     height: 400px;
     width: 250px;
-    border-width: 5px;
-    border-color: #5d85f9;
     border-radius: 10px;
     border-style: inset;
     border: 10px;
     float: left;
+  }
+  h1{
+    font-style: italic;
   }
 
   </style>
@@ -41,7 +40,7 @@
     wiki: 'http://en.wikipedia.org/wiki/Lemon_Balm',
     notes: "Also in the mint family, the leaves of this plant can be used to flavor tea, candy and ice cream. It also can be used to repel mosquitos and in aromatherapy. Lemon balm should be avoided by anyone taking thyroid medication (thyroxine, for example), because it is thought to inhibit the absorption of the medication. This plant has been studied for its stress-reduction, antiviral and antibacterial properties. This species contains eugenol, which kills bacteria and has been known to calm muscles and numb tissues as well as terpenes that add to its soothing effects. (Wikipedia)"
     }
-  var tmpl = "<img class='plantimg' src='img/{{sciname}}.jpeg'/> <h1> {{sciname}}</h1> <p>{{notes}}</p> <a href='{{wiki}}'> Wiki</a> <br /> <a href='http://www.gardenology.org/wiki/{{sciname}}'>Gardenology</a>"
+  var tmpl = "<img class='plantimg' src='img/{{sciname}}.jpeg'/> <h1> {{sciname}}</h1> <p>{{notes}}</p> <a href='{{wiki}}'> Wiki</a> • <a href='http://www.gardenology.org/wiki/{{sciname}}'>Gardenology</a> • <a href='http://pfaf.org/user/Plant.aspx?LatinName={{sciname}}'>Plants For a Future</a> "
   $(document).ready(
     function(){
       $('.nedsnotes').html(Mustache.to_html(tmpl, testdata))
