--- a/table.html
+++ b/table.html
@@ -13,6 +13,10 @@
   <title>Plants</title>
   </head>
 <body>
+  <article id='ned'>
+    <img src='img/nedarrow_smaller.png'>
+    <p>Click on the plants for Ned's Notes</p>
+    </article>
   <article id="popup" class="modal">
   </article>
   <article id="table">
@@ -47,7 +51,7 @@
       Mountain Mint
     </td>
     <td >
-      pycnanthemum sp.
+      pycnanthemum sp
     </td>
     <td></td>
     <td >
@@ -182,7 +186,7 @@
       Good King Henry
     </td>
     <td >
-      Chenopodium bonus-henricus
+      chenopodium bonus-henricus
     </td>
     <td></td>
     <td >
