normalize species names

--- a/table.html
+++ b/table.html
@@ -315,7 +315,7 @@
       Early Sweet Lowbush Blueberry
     </td>
     <td >
-      Vaccinium angustifolium<br>
+      vaccinium angustifolium
     </td>
     <td></td>
     <td >
@@ -330,7 +330,7 @@
       Highbush Blueberry (Andorra)
     </td>
     <td >
-      Vaccinium corymbosum
+      vaccinium corymbosum
     </td>
     <td></td>
     <td >
@@ -345,7 +345,7 @@
       Black Huckleberry
     </td>
     <td >
-      Gaylussacia baccata
+      gaylussacia baccata
     </td>
     <td></td>
     <td >
@@ -373,7 +373,7 @@
       Gumi
     </td>
     <td >
-      Elaeagnus multiflora<br>
+      elaeagnus multiflora<br>
     </td>
     <td></td>
     <td >
@@ -388,7 +388,7 @@
       American Persimmon
     </td>
     <td >
-      Diospyros virginiana
+      diospyros virginiana
     </td>
     <td></td>
     <td >
@@ -432,10 +432,10 @@
   </tr>
   <tr class="fruits">
     <td >
-      Regent" Saskatoon
+      "Regent" Saskatoon
     </td>
     <td >
-      amelanchier stolonifera Regent
+      amelanchier stolonifera
     </td>
     <td >
       yes
