fix nondeterministic css?

--- a/table.html
+++ b/table.html
@@ -20,7 +20,7 @@
   <article id="popup" class="modal">
   </article>
   <article id="table">
-    <table width="100%" class="condensed-table">      
+    <table class="condensed-table">      
 <thead>
   <tr>
     <th>Plant Species</th>
